create: added method to form

--- a/article.html
+++ b/article.html
@@ -411,7 +411,7 @@
       </div>
       <div class="comment-block">
         <img src="img/comments/avatar.png" alt="Аватар" class="comment-block__avatar">
-        <form action="#" class="comment-block__form">
+        <form action="send.php" method="POST" class="comment-block__form">
           <h2 class="comment-block__form-title">Что вы думаете на этот счет?</h2>
           <img src="img/comments/Shape.png" alt="Поле ввода" class="comment-block__form-bg">
           <textarea name="message" class="comment-block__form-message" minlength="100" required></textarea>
