create: added more pages

--- a/article-2.html
+++ b/article-2.html
@@ -49,7 +49,7 @@
     </div>
   </header>
 
-  <main class="main-display">
+  <main class="main-display main-display_2">
     <div class="container">
         <div class="main-display__container">
           <div class="main-display__top">
@@ -59,11 +59,11 @@
                 <img src="img/main/Home.svg" alt="Иконка: на главную" class="main-display__icon main-display__icon_home">
                 <span class="main-display__link-text">На главную</span>
               </a>
-              <a href="#" class="main-display__link main-display__link_prev">
+              <a href="/universal/article.html" class="main-display__link main-display__link_prev">
                 <img src="img/main/Arrow.svg" alt="Иконка: назад" class="main-display__icon main-display__icon_prev">
                 <span class="main-display__link-text">Назад</span>
               </a>
-              <a href="/universal/article-2.html" class="main-display__link main-display__link_next">
+              <a href="/universal/article-3.html" class="main-display__link main-display__link_next">
                 <span class="main-display__link-text">Вперед</span>
                 <img src="img/main/Arrow-1.svg" alt="Иконка: вперед" class="main-display__icon main-display__icon_next">
               </a>
@@ -313,7 +313,7 @@
               во всех регионах. Но если в вашем регионе есть, то поздравляю.</p>
               <div class="comments__bottom">
                 <img src="img/articles/Comment.svg" alt="Иконка" class="comments__bottom-icon">
-                <a href="#text" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
+                <a href="#" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb-1.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
                 <span class="numbers comments__bottom-numbers comments__bottom-numbers_green">+10</span>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
@@ -328,7 +328,7 @@
               Потому что обещали ввести этот режим везде.</p>
               <div class="comments__bottom">
                 <img src="img/articles/Comment.svg" alt="Иконка" class="comments__bottom-icon">
-                <a href="#text" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
+                <a href="#" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb-1.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
                 <span class="numbers comments__bottom-numbers">0</span>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
@@ -343,7 +343,7 @@
               бюджеты надо пополнять, но не лучше ли обложить налогом богатых?</p>
               <div class="comments__bottom">
                 <img src="img/articles/Comment.svg" alt="Иконка" class="comments__bottom-icon">
-                <a href="#text" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
+                <a href="#" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb-1.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
                 <span class="numbers comments__bottom-numbers comments__bottom-numbers_red">-3</span>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
@@ -358,7 +358,7 @@
               все заработало в моем регионе, буду в числе первых!</p>
               <div class="comments__bottom">
                 <img src="img/articles/Comment.svg" alt="Иконка" class="comments__bottom-icon">
-                <a href="#text" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
+                <a href="#" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb-1.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
                 <span class="numbers comments__bottom-numbers">0</span>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
@@ -372,7 +372,7 @@
               <p class="comments__description">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Первую, выйти свой образ запятых меня безопасную снова он за!</p>
               <div class="comments__bottom">
                 <img src="img/articles/Comment.svg" alt="Иконка" class="comments__bottom-icon">
-                <a href="#text" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
+                <a href="#" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb-1.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
                 <span class="numbers comments__bottom-numbers">0</span>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
@@ -386,7 +386,7 @@
               <p class="comments__description">Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Составитель до имеет текстами. Точках напоивший lorem продолжил своих раз осталось рот он выйти безопасную языкового, прямо свою свой запятой своего последний меня дал деревни проектах которой возвращайся букв океана вскоре предупреждал! Там имени, инициал домах запятых переписали взгляд парадигматическая!</p>
               <div class="comments__bottom">
                 <img src="img/articles/Comment.svg" alt="Иконка" class="comments__bottom-icon">
-                <a href="#text" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
+                <a href="#" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb-1.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
                 <span class="numbers comments__bottom-numbers">0</span>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
@@ -400,7 +400,7 @@
               <p class="comments__description">Далеко-далеко за словесными горами в стране гласных и согласных живут, рыбные тексты. Текста ручеек предупредила предупреждал деревни грустный напоивший одна своих повстречался продолжил, там послушавшись всеми инициал оксмокс необходимыми эта толку жаренные.</p>
               <div class="comments__bottom">
                 <img src="img/articles/Comment.svg" alt="Иконка" class="comments__bottom-icon">
-                <a href="#text" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
+                <a href="#" class="comments__bottom-link"><span class="comments__bottom-text">Ответить</span></a>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb-1.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
                 <span class="numbers comments__bottom-numbers">0</span>
                 <button class="comments__bottom-button"><img src="img/comments/Icon/Thumb.svg" alt="Иконка" class="comments__bottom-icon comments__bottom-icon_mr-10"></button>
