--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 готовы.</p>
             </div>
           </a>
-          <a href="#" class="dreamwork__link">
+          <a href="/universal/article.html#comments" class="dreamwork__link">
             <img src="img/articles/user-img.png" alt="Аватар пользователя" class="dreamwork__avatar">
             <span class="dreamwork__username">Инна Квашова:</span>
             <span class="dreamwork__comment">Каждый разработчик мечтает переехать в...</span>
@@ -240,7 +240,7 @@
               <h2 class="web-design__title">Где взять реальные проекты для портфолио</h2>
             </div>
           </a>
-          <a href="#" class="web-design__link">
+          <a href="/universal/article.html#comments" class="web-design__link">
             <img src="img/articles/user-img.png" alt="Аватар пользователя" class="web-design__avatar">
             <div class="web-design__link-text">
               <span class="web-design__username">Сара Женникова</span>
@@ -363,7 +363,7 @@
 
               <div class="news__card-bottom">
                 <span class="date news__card-date">6 августа</span>
-                <a href="#"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
+                <a href="/universal/article.html#comments"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
                 <span class="numbers news__card-numbers">342</span>
                 <button class="news__card-button"><img src="img/articles/heart.svg" alt="Иконка"
                     class="news__card-icon"></button>
@@ -392,7 +392,7 @@
                   берут в расчет, что лучшее обучение — это практика.</a></p>
               <div class="news__card-bottom">
                 <span class="date news__card-date">7 октября</span>
-                <a href="#"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
+                <a href="/universal/article.html#comments"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
                 <span class="numbers news__card-numbers">27</span>
                 <button class="news__card-button"><img src="img/articles/heart.svg" alt="Иконка"
                     class="news__card-icon"></button>
@@ -423,7 +423,7 @@
 
               <div class="news__card-bottom">
                 <span class="date news__card-date">12 декабря</span>
-                <a href="#"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
+                <a href="/universal/article.html#comments"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
                 <span class="numbers news__card-numbers">30</span>
                 <button class="news__card-button"><img src="img/articles/heart.svg" alt="Иконка"
                     class="news__card-icon"></button>
@@ -452,7 +452,7 @@
                   Он провел эксперимент и потенциальные заказчики...</a></p>
               <div class="news__card-bottom">
                 <span class="date news__card-date">20 июля</span>
-                <a href="#"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
+                <a href="/universal/article.html#comments"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
                 <span class="numbers news__card-numbers">102</span>
                 <button class="news__card-button"><img src="img/articles/heart.svg" alt="Иконка"
                     class="news__card-icon"></button>
@@ -481,7 +481,7 @@
                   мы подготовили для вас. Внутри важная информация про...</a></p>
               <div class="news__card-bottom_contry">
                 <span class="date news__card-date news__card-date_contry">22 октября</span>
-                <a href="#"><img src="img/articles/Comment.svg" alt="Иконка"
+                <a href="/universal/article.html#comments"><img src="img/articles/Comment.svg" alt="Иконка"
                     class="news__card-icon news__card-icon_contry"></a>
                 <span class="numbers news__card-numbers news__card-numbers_contry">5</span>
                 <button class="news__card-button"><img src="img/articles/heart.svg" alt="Иконка"
@@ -511,7 +511,7 @@
                   лекции и бесплатные курсы.</a></p>
               <div class="news__card-bottom">
                 <span class="date news__card-date">26 октября</span>
-                <a href="#"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
+                <a href="/universal/article.html#comments"><img src="img/articles/Comment.svg" alt="Иконка" class="news__card-icon"></a>
                 <span class="numbers news__card-numbers">101</span>
                 <button class="news__card-button"><img src="img/articles/heart.svg" alt="Иконка"
                     class="news__card-icon"></button>
