create: added links

--- a/article.html
+++ b/article.html
@@ -193,10 +193,10 @@
         обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации дальнейших направлений развития. Таким
         образом консультация с широким активом способствует подготовки и реализации направлений</p>
         <div class="article__card">
-          <h2 class="article__card-title"><a href="#" class="article__card-link">Материал по теме</a></h2>
-          <a href="#" class="article__card-link"><img src="img/article/card-photo.png" alt="Жираф" class="article__card-image"></a>
-          <h3 class="article__card-subtitle"><a href="#" class="article__card-link">20+ инструментов для js-разработчика</a></h3>
-          <p class="article__card-description"><a href="#" class="article__card-link">Узнайте, какими инструментами вы еще не пользовались, а могли бы. Эти инструменты помогут вам ускорить свою работу или
+          <h2 class="article__card-title"><a href="/universal/article-2.html" class="article__card-link">Материал по теме</a></h2>
+          <a href="/universal/article-2.html" class="article__card-link"><img src="img/article/card-photo.png" alt="Жираф" class="article__card-image"></a>
+          <h3 class="article__card-subtitle"><a href="/universal/article-2.html" class="article__card-link">20+ инструментов для js-разработчика</a></h3>
+          <p class="article__card-description"><a href="/universal/article-2.html" class="article__card-link">Узнайте, какими инструментами вы еще не пользовались, а могли бы. Эти инструменты помогут вам ускорить свою работу или
           повысить ее качество. Все инструменты собраны в виде...</a></p>
           <div class="article__card-bottom">
             <img src="img/article/Eye.svg" alt="Иконка" class="article__card-bottom-icon">
