--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
       </div>
     </div>
   </footer>
-
+  <button class="up-button">↑</button>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
