create: added more hover effects

--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
         <div class="social articles__card articles__card_social">
           <h2 class="social__title">Наши соцсети</h2>
           <div class="social-wrapper">
-            <a href="#" class="social__link"><img src="img/facebook.svg" alt="Иконка" class="social__icon"></a>
-            <a href="#" class="social__link"><img src="img/twitter.svg" alt="Иконка" class="social__icon"></a>
-            <a href="#" class="social__link"><img src="img/youtube.svg" alt="Иконка" class="social__icon"></a>
+            <a href="https://www.facebook.com/" class="social__link"><img src="img/facebook.svg" alt="Иконка" class="social__icon"></a>
+            <a href="https://twitter.com/?lang=ru" class="social__link"><img src="img/twitter.svg" alt="Иконка" class="social__icon"></a>
+            <a href="https://www.youtube.com/?gl=RU&hl=ru" class="social__link"><img src="img/youtube.svg" alt="Иконка" class="social__icon"></a>
           </div>
         </div>
       </div>
