--- a/index.html
+++ b/index.html
@@ -232,14 +232,16 @@
             <img src="img/articles/user-img.png" alt="Аватар пользователя" class="dreamwork__avatar">
             <span class="dreamwork__username">Инна Квашова:</span>
             <span class="dreamwork__comment">Каждый разработчик мечтает переехать в...</span>
-            <a href="/universal/article.html#comments" class="dreamwork__link">
-              <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M11.1346 10.9998V13.9998L8.36064 10.9998H2.25C1.42157 10.9998 0.75 10.3282 0.75 9.49976V1.99976C0.75 1.17133 1.42157 0.499756 2.25 0.499756H12.75C13.5784 0.499756 14.25 1.17133 14.25 1.99976V9.49976C14.25 10.3282 13.5784 10.9998 12.75 10.9998H11.1346Z"
-                  fill="currentColor" />
-              </svg>
-            </a>
-            <span class="numbers dreamwork__comment-numbers">342</span>
+            <diw class="dreamwork__comment-wrapper">
+              <a href="/universal/article.html#comments" class="dreamwork__link">
+                <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M11.1346 10.9998V13.9998L8.36064 10.9998H2.25C1.42157 10.9998 0.75 10.3282 0.75 9.49976V1.99976C0.75 1.17133 1.42157 0.499756 2.25 0.499756H12.75C13.5784 0.499756 14.25 1.17133 14.25 1.99976V9.49976C14.25 10.3282 13.5784 10.9998 12.75 10.9998H11.1346Z"
+                    fill="currentColor" />
+                </svg>
+              </a>
+              <span class="numbers dreamwork__comment-numbers">342</span>
+            </diw>
           </div>
         </div>
         <div class="web-design articles__card articles__card_web-design">
