--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
       <div class="news__wrapper">
         <div class="news__left">
           <div class="news__card">
-            <a href="/universal/article.html" class="news__card-link"><img src="img/news/photo-large-1.png"
+            <a href="/universal/article.html" class="news__card-link"><img src="img/news/photo-large-1.webp"
                 alt="Новости" class="news__card-image"></a>
             <div class="news__card-text">
               <a href="/universal/article.html" class="news__card-link"><span
