--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
                       fill="currentColor" />
                   </svg>
                 </button>
+                <span class="numbers news__card-numbers">284</span>
               </div>
               <div class="flag news__card-flag">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
