refact: change diw to div

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <img src="img/articles/user-img.png" alt="Аватар пользователя" class="dreamwork__avatar">
             <span class="dreamwork__username">Инна Квашова:</span>
             <span class="dreamwork__comment">Каждый разработчик мечтает переехать в...</span>
-            <diw class="dreamwork__comment-wrapper">
+            <div class="dreamwork__comment-wrapper">
               <a href="/universal/article.html#comments" class="dreamwork__link">
                 <svg width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
@@ -241,7 +241,7 @@
                 </svg>
               </a>
               <span class="numbers dreamwork__comment-numbers">342</span>
-            </diw>
+            </div>
           </div>
         </div>
         <div class="web-design articles__card articles__card_web-design">
