create: change hover effect in header links

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 </button>
               </form>
             </li>
-            <li class="header-nav__item"><a href="#" class="header-nav__link">Статьи</a></li>
-            <li class="header-nav__item"><a href="#" class="header-nav__link">Новости</a></li>
-            <li class="header-nav__item"><a href="#" class="header-nav__link">Курсы</a></li>
-            <li class="header-nav__item"><a href="#" class="header-nav__link">HTML</a></li>
-            <li class="header-nav__item"><a href="#" class="header-nav__link">CSS</a></li>
-            <li class="header-nav__item"><a href="#" class="header-nav__link">JavaScript</a></li>
-            <li class="header-nav__item"><a href="#" class="header-nav__link">Web Design</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link_hover">Статьи</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link_hover">Новости</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link_hover">Курсы</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link_hover">HTML</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link_hover">CSS</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link_hover">JavaScript</a></li>
+            <li class="header-nav__item"><a href="#" class="header-nav__link header-nav__link_hover">Web Design</a></li>
           </ul>
         </div>
         <form action="#" class="header-nav__search header-nav__search_mobile_hidden">
